CREATE TABLE tblCustomer
(
	[Id] UNIQUEIDENTIFIER NOT NULL,
	[FirstName] NVARCHAR(100) NOT NULL,
	[LastName] NVARCHAR(100) NOT NULL,
	[Email] NVARCHAR(255) NOT NULL,
	[PhoneNumber] NVARCHAR(20) NULL,
	[CreatedAt] DATETIMEOFFSET NOT NULL DEFAULT SYSDATETIMEOFFSET(),
	[ModifiedAt] DATETIMEOFFSET NULL,
	[RowVersion] ROWVERSION,

	CONSTRAINT PK_Customer PRIMARY KEY (Id),
	CONSTRAINT UQ_Customer_Email UNIQUE (Email),

	INDEX IX_Customer_Email NONCLUSTERED (Email),
	INDEX IX_Customer_LastName NONCLUSTERED (LastName)
)
