CREATE TABLE tblDataSource
(
	[Id] UNIQUEIDENTIFIER NOT NULL,
	[Name] NVARCHAR(100) NOT NULL,
	[DataSourceType] NVARCHAR(50) NOT NULL,
	[LogoUrl] NVARCHAR(500) NULL,
	[IsActive] BIT NOT NULL DEFAULT 1,
	[CreatedAt] DATETIMEOFFSET NOT NULL DEFAULT SYSDATETIMEOFFSET(),
	[ModifiedAt] DATETIMEOFFSET NULL,
	[RowVersion] ROWVERSION,

	CONSTRAINT PK_DataSource PRIMARY KEY (Id),
	CONSTRAINT UQ_DataSource_Name UNIQUE (Name),

	INDEX IX_DataSource_Name NONCLUSTERED (Name),
	INDEX IX_DataSource_Type NONCLUSTERED (DataSourceType)
)
